--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "node rebuild.js && tsc -p tsconfig-cjs.json",
+    "build": "node rebuild.js && node updateExport.js es5 && tsc -p tsconfig-cjs.json && node updateExport.js es6 && tsc -p tsconfig.json",
     "build:cjs": "node rebuild.js && tsc -p tsconfig-cjs.json",
     "build:esm": "node rebuild.js && tsc -p tsconfig.json",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
@@ -30,15 +30,17 @@
     "@babel/types": "^7.11.0",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.6.2",
     "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "export-helper": "^0.1.1",
     "husky": "^4.2.5",
     "jest": "^26.4.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.2.0",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.7"
